- Fixed bug #50255 (isset() and empty() silently casts array to object)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@291282 c90b9560-bf6c-de11-be94-00142212c4b1